Fixed button issues when the viewport width of the website was too low.
Fixed button images being squashed - are now zoomed into.
Fixed button label wrapping and overflowing out of bounds of the button - now only wraps if the rest of the button's contents is already hidden.

--- a/css/main.css
+++ b/css/main.css
@@ -303,17 +303,23 @@
 .button-text .label-main {
   font-size: 20px;
   margin-left: 10px;
+  text-wrap: nowrap;
 }
 
 .button-text .label-sub {
   font-size: 14px;
   opacity: 0.8;
   margin-left: 10px;
+  text-wrap: nowrap;
 }
 
 @media (max-width: 610px) {
   .button-text .label-sub {
     display: none;
+    text-wrap: wrap;
+  }
+  .button-text .label-main {
+    text-wrap: wrap;
   }
   .button-img {
     display: none;
@@ -330,6 +336,7 @@
   margin-left: 12px;
   margin-top: -2px;
   overflow: hidden;
+  object-fit: cover;
   mask-image: linear-gradient(to right, transparent, black);
 }
 
